--- a/assets/css/xplayer.css
+++ b/assets/css/xplayer.css
@@ -1,19 +1,23 @@
-#wrapper{
-  background: url('../imgs/mcover.jpg') no-repeat; background-size: 100% 100%;
+#wrapper {
+  background: url("../imgs/mcover.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   color: white;
 }
 #music {
   display: none;
 }
-#preloader{
+#preloader {
   top: 0px;
   bottom: 0px;
   background-color: rgba(0, 0, 0, 0.6);
 }
-#head{
-  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+#head {
+  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica,
+    Arial, sans-serif;
 }
-#head img{
+#head img {
   position: relative;
   top: -1px;
 }
@@ -28,19 +32,20 @@
 #playlist::-webkit-scrollbar {
   width: 0px;
 }
-#playlist::-webkit-scrollbar-track{
-  background: rgba(158, 158, 158, 0.1);
+#playlist::-webkit-scrollbar-track {
+  background: rgba(158, 158, 158, 0.4);
   border-radius: 15px;
 }
 #playlist::-webkit-scrollbar-thumb {
-  background: #000; 
+  background: #000;
   border-radius: 15px;
 }
-#playlist::-webkit-scrollbar-button{
+#playlist::-webkit-scrollbar-button {
   color: green;
 }
 .songs {
   display: block;
+  color: ghostwhite;
   background-color: rgba(158, 158, 158, 0.1);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 13px;
@@ -93,12 +98,12 @@ span.title {
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
 }
-#song-title{
+#song-title {
   font-size: 14px;
 }
-@media screen and (max-width: 600px){
+@media screen and (max-width: 600px) {
   #playlist {
     width: 100%;
-    max-height: 350px
+    max-height: 350px;
   }
 }
